--- a/report/main.tex
+++ b/report/main.tex
@@ -117,7 +117,7 @@
 
 \clearpage
 \section{Casing}\label{sec:case}
-\chapterauthor{Lundberg, Josef ( , )}
+\chapterauthor{Lundberg, Josef (  )}
 \input{casing.tex}
 
 \clearpage
