--- a/report/references.tex
+++ b/report/references.tex
@@ -2,8 +2,6 @@
 \label{sec:ref}
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
-% Reference to casing cad software missing
-\bibitem{cad}
 % Reference to software used to develop battery circuit missing
 \bibitem{onlineCad}
 
@@ -27,6 +25,10 @@
  \url{https://www.adafruit.com/product/3317}
 \bibitem{load_cell}
  \url{http://www.te.com/commerce/DocumentDelivery/DDEController?Action=srchrtrv&DocNm=FX19&DocType=DS&DocLang=English}
+\bibitem{ina_126}
+ \url{http://www.ti.com/lit/ds/symlink/ina126.pdf}
+\bibitem{Tof_cover}
+ \url{http://www.st.com/content/ccc/resource/technical/document/application_note/group0/9d/93/be/33/13/be/46/19/DM00326504/files/DM00326504.pdf/jcr:content/translations/en.DM00326504.pdf}
 
 \bibitem{x-cube-mems1}
   \url{http://www.st.com/en/embedded-software/x-cube-mems1.html}
