--- a/report/references.tex
+++ b/report/references.tex
@@ -2,6 +2,8 @@
 \label{sec:ref}
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
+% Reference to casing cad software missing
+\bibitem{cad}
 % Reference to software used to develop battery circuit missing
 \bibitem{onlineCad}
 
@@ -10,26 +12,12 @@
 \bibitem{kicad}
   KiCad open source electronics design,
   \url{kicad-pcb.org/}
-\bibitem{cad}
-  \url{https://www.autodesk.com/products/fusion-360/overview}
 \bibitem{overprotection}
 	Overvoltage and Reverce-voltage Protection in Automotive Systems,
 	Application note 760, \emph{Maxim integrated}, Apr 02, 2002, 
 	\url{https://www.maximintegrated.com/en/app-notes/index.mvp/id/760}
 \bibitem{x-cube-ble1}
   \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
-
-\bibitem{micro-epsilon-mk30}
- \url{https://www.micro-epsilon.se/displacement-position-sensors/draw-wire-sensor/MK_Serie/}
-\bibitem{micro_lidar}
- \url{https://www.adafruit.com/product/3317}
-\bibitem{load_cell}
- \url{http://www.te.com/commerce/DocumentDelivery/DDEController?Action=srchrtrv&DocNm=FX19&DocType=DS&DocLang=English}
-\bibitem{ina_126}
- \url{http://www.ti.com/lit/ds/symlink/ina126.pdf}
-\bibitem{Tof_cover}
- \url{http://www.st.com/content/ccc/resource/technical/document/application_note/group0/9d/93/be/33/13/be/46/19/DM00326504/files/DM00326504.pdf/jcr:content/translations/en.DM00326504.pdf}
-
 \bibitem{x-cube-mems1}
   \url{http://www.st.com/en/embedded-software/x-cube-mems1.html}
 \bibitem{bluenrg-app}
